workloads/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: calibre
  ports:
    - name: http
      port: 8083
      targetPort: 8083
